--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 
 CC=gcc
 
-
-memory_access_time: memory_access_time.c
-	$(CC) -o $@ $^ -lnuma
+numa_memory_access_time: numa_memory_access_time.c
+	$(CC) -o numa_memory_access_time numa_memory_access_time.c -lnuma
 	sudo setcap "all=ep" $@
+
