--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,11 @@
 
-CC=gcc
+CC	=	gcc
+CFLAGS	=	-O3
 
 numa_memory_access_time: numa_memory_access_time.c
-	$(CC) -o numa_memory_access_time numa_memory_access_time.c -lnuma
+	$(CC) $(CFLAGS) -o numa_memory_access_time numa_memory_access_time.c -lnuma
 	sudo setcap "all=ep" $@
 
+
+clean:
+	rm -f *.o numa_memory_access_time
