--- a/src/Makefile
+++ b/src/Makefile
@@ -9,16 +9,17 @@ TARGET_ACCESS_TIME		= numa_memory_access_time
 TARGET_TRAFFIC_INJECTOR	= numa_memory_traffic_injector
 TARGET_MEMORY_HOG		= numa_memory_hog
 TARGET_NIMBLE_CONTROL	= nimble_control
+TARGET_NUMA_LAUNCH		= numa_launch
 
-TARGETS	= $(TARGET_ACCESS_TIME) $(TARGET_TRAFFIC_INJECTOR) $(TARGET_MEMORY_HOG) $(TARGET_NIMBLE_CONTROL)
+TARGETS	= $(TARGET_ACCESS_TIME) $(TARGET_TRAFFIC_INJECTOR) $(TARGET_MEMORY_HOG) $(TARGET_NIMBLE_CONTROL) $(TARGET_NUMA_LAUNCH)
 
 OBJS_ACCESS_TIME		= numa_memory_access_time.o cpu_freq.o
 OBJS_TRAFFIC_INJECTOR	= numa_memory_traffic_injector.o cpu_freq.o
 OBJS_MEMORY_HOG			= numa_memory_hog.o
 OBJS_NIMBLE_CONTROL		= nimble_control.o
+OBJS_NUMA_LAUNCH		= numa_launch.o
 
-
-OBJS			= $(OBJS_ACCESS_TIME) $(OBJS_TRAFFIC_INJECTOR) $(OBJS_MEMORY_HOG) $(OBJS_NIMBLE_CONTROL)
+OBJS			= $(OBJS_ACCESS_TIME) $(OBJS_TRAFFIC_INJECTOR) $(OBJS_MEMORY_HOG) $(OBJS_NIMBLE_CONTROL) $(OBJS_NUMA_LAUNCH)
 
 HEADERS	= cpu_util.h cpu_freq.h
 
@@ -28,6 +29,7 @@ $(TARGETS):$(OBJS) $(HEADERS)
 	$(CC) $(CFLAGS) -o $(TARGET_TRAFFIC_INJECTOR) $(OBJS_TRAFFIC_INJECTOR) $(LIBS)
 	$(CC) $(CFLAGS) -o $(TARGET_MEMORY_HOG) $(OBJS_MEMORY_HOG) $(LIBS)
 	$(CC) $(CFLAGS) -o $(TARGET_NIMBLE_CONTROL) $(OBJS_NIMBLE_CONTROL) $(LIBS)
+	$(CC) $(CFLAGS) -o $(TARGET_NUMA_LAUNCH) $(OBJS_NUMA_LAUNCH) $(LIBS)
 
 #@sudo setcap "all=ep" numa_memory_access_time
 #@sudo setcap "all=ep" numa_memory_traffic_injector
